[package]
name = "hdeposit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.9"
anyhow = "1"
k256 = "0.13.1"
clap = {version = "4", features = ["derive"]}
tokio = {version = "1.32.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
bb8-postgres = {version = "0.8", features = ["with-serde_json-1"]}
url = "2"
reqwest = "0.11"
serde_json = "1"
lighthouse-types = { git = "https://github.com/sigp/lighthouse.git", branch = "stable", package = "types"}
lighthouse-bls = { git = "https://github.com/sigp/lighthouse.git", branch = "stable", package = "bls"}
eth2_keystore = { git = "https://github.com/sigp/lighthouse.git", branch = "stable", package = "eth2_keystore"}
tree_hash = "0.5.0"