[package]
name = "syncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
eth2 = { workspace = true}
ethers = { workspace = true}
storage = {path = "../storage"}
tokio = {version = "1.32.0", features = ["full"]}
chrono = "0.4"
slot_clock = { workspace = true }
backoff = {version = "0.4", features = ["tokio"]}
futures = "0.3"
tracing = "0.1"