[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.32.0", features = ["full"]}
clap = {version = "4", features = ["derive"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
anyhow = "1"
eth2 = {workspace = true }
ethers = {workspace = true}
serde_yaml = "0.9.25"
slot_clock = { workspace = true }
storage = {path = "../storage"}
bb8-postgres = {version = "0.8", features = ["with-serde_json-1"]}
axum = "0.6.20"
serde = "1"
serde_json = "1"
contract = {path = "../contract"}